--- a/views/home.html
+++ b/views/home.html
@@ -13,23 +13,25 @@ rel="stylesheet" /><!-- hojas de estilos de awesome -->
 
 <body>
     <header>
-        
+        <div class="header-container">
+        <div class="top-logo-search">
        <div class="logo"><a href="/"><img src="/images/logo-mercado-liebre.svg" alt="logo mercado liebre"></a></div>
         <div class="busqueda">
             <input type="search" placeholder="Buscar productos, marcas">
             <button><i class="fa-solid fa-magnifying-glass"></i>
             </button>
         </div>
-        <p><i class="fa-solid fa-hand-holding-dollar"></i>
+        <p class="mano"><i class="fa-solid fa-hand-holding-dollar"></i>
             Compra en cuotas sin tarjeta de credito</p>
-        <nav>
+        </div>
+        <nav class="nav-container">
             <ul class="lista-superior">
                 <li><a href="">Ofertas</a></li>
                 <li><a href="">Tiendas Oficiales</a></li>
                 <li><a href="">Vender</a></li>
                 <li><a href="">Ayuda</a></li>
             </ul>
-            <ul>
+            <ul class="lista-inferior">
                 <li><a href="">Crea tu cuenta <i class="fas fa-credit-card"></i></a></li>
                 <li><a href="">Ingresa <i class="fas fa-sign-in-alt "></i></a></li>
                 <li><a href="">Mis Compras <i class="fa-solid fa-basket-shopping"></i>
@@ -39,46 +41,65 @@ rel="stylesheet" /><!-- hojas de estilos de awesome -->
         <div class="burger-menu">
             <i class="fas fa-bars"></i>
             </div>
+        </div>
     </header>
+    <!-- fin del header -->
+    <!-- inicio del main -->
     <main class="home__productos">
         <img class="banner" src="/images/img-home-banner.jpg" alt="imagen de img de banner" width="100%">
+        <h5 class="seccion__productos--titulo">Ofertas</h5>
+    <div class="container-productos"> 
         <section class="seccion__productos">
-            <h4 class="seccion__productos--titulo">Basado en tu ultima visita</h4>
+
             <article class="seccion__productos--tarjetas">
                 <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera moulinex" width="80%">
-                <p>$6.770</p>
-                <p>40% off</p>
-                <h5>Cafetera Moulinex</h5>
+                <div class="caracteristicas">
+                <div class="camion"><i class="fa-solid fa-truck-fast"></i></div>
+                <p class="precio">$6.770</p>
+                <p class="descuentos">40% off</p>
+            </div>
+                <h4>Cafetera Moulinex</h4>
+                
             </article>
+
         </section>
-        <section>
-            <h4>Basado en tu ultima visita</h4>
-            <article>
+        <section class="seccion__productos">
+            <article class="seccion__productos--tarjetas">
                 <img src="/images/img-macbook-pro-2019.jpg" alt="cafetera moulinex" width="80%">
-                <p>$230.00</p>
-                <p>20% off</p>
-                <h5>MacBook Pro 2019</h5>
+                <div class="caracteristicas">
+                <div class="camion"><i class="fa-solid fa-truck-fast"></i></div>
+                <p class="precio">$230.00</p>
+                <p class="descuentos">20% off</p>
+            </div>
+                <h4>MacBook Pro 2019</h4>
+            
             </article>
         </section>
-        
-        <section>
-            <h4>Basado en tu ultima visita</h4>
-            <article>
+        <section class="seccion__productos">
+            <article class="seccion__productos--tarjetas">
                 <img src="/images/img-samsung-galaxy-s10.jpg" alt="cafetera moulinex" width="80%">
-                <p>$70.500</p>
-                <p>10% off</p>
-                <h5>Sansung Galaxy S10</h5>
+                <div class="caracteristicas">
+                <div class="camion"><i class="fa-solid fa-truck-fast"></i></div>
+                <p class="precio">$70.500</p>
+                <p class="descuentos">10% off</p>
+            </div>
+                <h4>Sansung Galaxy S10</h4>
+           
             </article>
         </section>
-        <section>
-            <h4>Basado en tu ultima visita</h4>
-            <article>
+        <section class="seccion__productos">
+            <article class="seccion__productos--tarjetas">
                 <img src="/images/img-tv-samsung-smart.jpg" alt="smart tv" width="80%">
-                <p>$23.200</p>
-                <p>5% off</p>
-                <h5>SmartTv Samsung 43"</h5>
+                <div class="caracteristicas">
+                <div class="camion"><i class="fa-solid fa-truck-fast"></i></div>
+                <p class="precio">$23.200</p>
+                <p class="descuentos">5% off</p>
+            </div>
+                <h4>SmartTv Samsung 43"</h4>
+           
             </article>
         </section>
+    </div>
     </main>
 
     <footer>
